# rfp_management_langgraph

./: pyproject.toml
rfp_management_langgraph/: app.py  app2.py  graph.py  nodes.py  state.py  test.ipynb
rfp_management_langgraph/0.test_notebooks/: test_chromadb.ipynb  test_graph.ipynb
rfp_management_langgraph/chroma_db/: chroma.sqlite3
rfp_management_langgraph/data/demand_data/: demand.ipynb  supply_demand.csv
rfp_management_langgraph/data/pricing_history/: historical_pricing.csv  pricing.ipynb
rfp_management_langgraph/docs/: pricing_risk.md  proposals.md  rfp_analysis.md
rfp_management_langgraph/tools/: analyze_pricing_risk.py  contract_generator.py  counter_offer_generator.py  legal_review.py  negotiation_email_writer.py  negotiationchartercreator.py  pdf_vectorizer.py  revise_contract.py  rfp_analyzer.py
rfp_management_langgraph/utils/: output_utils.py
