[project]
name = "rfp-management-langgraph"
version = "0.1.0"
description = ""
authors = [
    {name = "rohit0221",email = "rohit0221@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.3.5,<0.4.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "openai (>=1.65.4,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
